Supporting Java 21